--- a/public/css/style.css
+++ b/public/css/style.css
@@ -32,21 +32,31 @@ body{
   font-family: 'Poppins', sans-serif;
 }
 
+main{
+  margin: 2.4rem 0rem;
+}
+
 .topic{
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
   background-color: white;
   border-radius: 1rem;
   width: 70rem;
   height: 32rem;
-  padding-left: 5.5rem;
+  padding-left: 5.6rem;
   box-shadow: 4px 0px 19px 0px #00000014;
+  margin-bottom: 2.4rem;
 }
 
 .topic img{
   position: relative;
-  left: 4rem;
+  left: 3rem;
+}
+
+.topic .button{
+  width: 18rem;
+  background-color: var(--yellow);
 }
 
 .topicContent{
@@ -76,6 +86,10 @@ body{
   font-size: 1.2rem;
 }
 
+a:visited{
+  color: var(--black);
+}
+
 #numQuestions{
   text-align: center;
   margin-right: 3.0rem;
@@ -91,15 +105,19 @@ body{
   line-height: 1.3rem;
 }
 
-button{
+.button{
   font-family: 'Poppins', sans-serif;
-  background-color: var(--yellow);
   border-radius: 1.0rem;
   border: 0.2rem solid #191919;
-  padding: 1.2rem 2.2rem;
-  font-size: 1.8rem;
+  padding: .8rem 2.4rem;
+  width: 12rem;
+  font-size: 1.6rem;
   font-weight: 500;
   cursor: pointer;
+}
+
+.button:hover{
+  opacity: 60%;
 }
 
 .askBox{
@@ -110,10 +128,10 @@ button{
   border-radius: 1rem;
   width: 70rem;
   height: max-content;
-  padding: 2.4rem 5.5rem;
+  padding: 2.4rem 5.6rem;
 }
 
-form{
+.askBox form{
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -164,17 +182,75 @@ input::placeholder{
   font-weight: 500;
 }
 
-form > button {
-  width: 15rem;
+.boxQuestion{
+  display: flex;
+  flex-direction: column;
+  width: 70rem;
+  border-radius: .5rem;
+  height: max-content;
+  padding: 2.4rem 5.5rem;
+  margin-top: 2.4rem;
+  background-color: var(--white);
+  box-shadow: 4px 0px 19px 0px #00000014;
+  padding: 2.4rem;
 }
 
-#grey{
+#yellowButton{
+  background-color: var(--yellow);
+}
+
+#greyButton{
   background-color: var(--grey);
   margin-left: 1.6rem;
 }
 
-.askButtons{
+
+.boxQuestion .contentQuestion{
+  font-weight: 500;
+  margin-bottom: 3.6rem;
+}
+
+#titleAsk {
+  font-size: 2.4rem;
+  margin-bottom: 1.2rem;
+}
+
+#descriptionAsk{
+  font-size: 1.4rem;
+  height: max-content;
+}
+
+#answersCount{
+  text-align: right;
+  font-size: 1.2rem;
+}
+
+.askButtons, .questionButtons{
   display: flex;
+  width: 100%;
   flex-direction: row;
   justify-content: right;
+}
+
+.boxAnswer{
+  display: flex;
+  flex-direction: column;
+  width: 70rem;
+  border-radius: .5rem;
+  height: max-content;
+  padding: 2.4rem 5.5rem;
+  margin-top: 2.4rem;
+  background-color: var(--white);
+  box-shadow: 4px 0px 19px 0px #00000014;
+  padding: 2.4rem;
+}
+
+.boxAnswer form{
+  display: flex;
+  flex-direction: column;
+
+}
+
+.view{
+  display: none;
 }
