--- a/public/css/style.css
+++ b/public/css/style.css
@@ -108,11 +108,13 @@ a:visited{
 .button{
   font-family: 'Poppins', sans-serif;
   border-radius: 1.0rem;
+  color: var(--black);
   border: 0.2rem solid #191919;
   padding: .8rem 2.4rem;
   width: 12rem;
   font-size: 1.6rem;
   font-weight: 500;
+  text-align: center;
   cursor: pointer;
 }
 
@@ -188,11 +190,10 @@ input::placeholder{
   width: 70rem;
   border-radius: .5rem;
   height: max-content;
-  padding: 2.4rem 5.5rem;
+  padding: 2.4rem 5.6rem;
   margin-top: 2.4rem;
   background-color: var(--white);
   box-shadow: 4px 0px 19px 0px #00000014;
-  padding: 2.4rem;
 }
 
 #yellowButton{
@@ -206,6 +207,7 @@ input::placeholder{
 
 
 .boxQuestion .contentQuestion{
+  width: 60%;
   font-weight: 500;
   margin-bottom: 3.6rem;
 }
