--- a/views/index.ejs
+++ b/views/index.ejs
@@ -21,7 +21,7 @@
         <p id="answersCount">6 answers</p>
         <div class="contentQuestion">
           <p id="titleAsk"><%= question.title %></p>
-        <p class="view" id="descriptionAsk"><%= question.description %></p>
+        <p id="descriptionAsk"><%= question.description %></p>
         </div>
         <div class="questionButtons">
           <a href="/question/<%=question.id%>" class="button" id="yellowButton">Answer</a>
