--- a/views/ask.ejs
+++ b/views/ask.ejs
@@ -7,9 +7,9 @@
        <form method="POST" action="/saveQuestion">
           <input name="title" type="text" placeholder="Question Title"/>
           <textarea name="description" rows="5" placeholder="Describe your question..."></textarea>
-          <div class="askButtons">
-            <button type="submit" id="yellowButton">Send</button>
-            <button type="reset" id="greyButton">Cancel</button>
+          <div class="actionButtons">
+            <button type="submit" class="button" id="yellowButton">Send</button>
+            <a href="/" class="button" id="greyButton">Cancel</a>
         </div>
       </form>
     </div>
