--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,7 +9,7 @@
           <div id="numQuestions"><p>1200</p><p>Questions</p></div>
           <div id="numAnswers"><p>867</p><p>Answers</p></div>
           </div>
-         <a href="" class="button" id="yellowButton">Ask a question</a>
+         <a href="/ask" class="button" id="yellowButton">Ask a question</a>
       </div>
       <img src="/assets/cake.svg" alt="Cake Illustration">
     </div>
@@ -23,7 +23,7 @@
           <p id="titleAsk"><%= question.title %></p>
         <p id="descriptionAsk"><%= question.description %></p>
         </div>
-        <div class="questionButtons">
+        <div class="actionButtons">
           <a href="/question/<%=question.id%>" class="button" id="yellowButton">Answer</a>
         </div>
       </div>
