--- a/public/css/style.css
+++ b/public/css/style.css
@@ -165,7 +165,7 @@ input[type=text]{
 }
 
 textarea{
-  height: 12rem;
+  height: 25rem;
   margin-bottom: 1.6rem;
   resize: none;
   border: .2rem solid var(--black);
@@ -220,6 +220,7 @@ input::placeholder{
 #titleAsk {
   font-size: 2.4rem;
   margin-bottom: 1.2rem;
+  overflow-wrap: break-word;
 }
 
 #descriptionAsk{
