--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,8 +6,8 @@
       <div class="topicContent">
         <h1>Baking Q&A</h1>
         <div class="topicNumbers">
-          <div id="numQuestions"><p>1200</p><p>Questions</p></div>
-          <div id="numAnswers"><p>867</p><p>Answers</p></div>
+          <div id="numQuestions"><p><%= totalQuestions %></p><p>Questions</p></div>
+          <div id="numAnswers"><p><%= totalAnswers %></p><p>Answers</p></div>
           </div>
          <a href="/ask" class="button" id="yellowButton">Ask a question</a>
       </div>
@@ -18,7 +18,6 @@
     <div class="questions">
       <% questions.forEach(question => {%>
       <div class=boxQuestion>
-        <p id="answersCount">6 answers</p>
         <div class="contentQuestion">
           <p id="titleAsk"><%= question.title %></p>
         <p id="descriptionAsk"><%= question.description %></p>
